gcp/sml/lab-automation/sockshop/ctx.yaml
apiVersion: v1
kind: Service
metadata:
  name: sml1-cpx-service
  labels:
    app: cpx-service
    service-type: sml1-citrix-adc-cpx-svcmon
spec:
  ports:
  - port: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  selector:
    app: sml1-cpx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sml1-cpx
  namespace: default
spec:
  selector:
    matchLabels:
      app: sml1-cpx
  replicas: 1
  template:
    metadata:
      name: sml1-cpx
      labels:
        app: sml1-cpx
        adc: citrix
    spec:
      serviceAccountName: sml1-cpx
      containers:
      - name: cpx-ingress
        image: quay.io/citrix/citrix-k8s-cpx-ingress:13.0-83.27
        imagePullPolicy: IfNotPresent
        tty: true
        securityContext:
          privileged: true
        resources: {}
        volumeMounts:
        - mountPath: /var/deviceinfo
          name: shared-data
        - mountPath: /cpx/
          name: cpx-volume
      - name: cic
        image: quay.io/citrix/citrix-k8s-ingress-controller:1.25.6
        imagePullPolicy: IfNotPresent
        args:
        - --configmap default/sml1-cpx-cic-configmap
        - --ingress-classes tier-2-cpx1
        volumeMounts:
        - mountPath: /var/deviceinfo
          name: shared-data
        resources: {}
      volumes:
      - name: shared-data
        emptyDir: {}
      - name: cpx-volume
        emptyDir: {}
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: tier-2-cpx1
spec:
  controller: citrix.com/ingress-controller
---
apiVersion: v1
kind: Service
metadata:
  name: sml2-cpx-service
  labels:
    app: cpx-service
    service-type: sml2-citrix-adc-cpx-svcmon
spec:
  ports:
  - port: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  selector:
    app: sml2-cpx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sml2-cpx
  namespace: default
spec:
  selector:
    matchLabels:
      app: sml2-cpx
  replicas: 1
  template:
    metadata:
      name: sml2-cpx
      labels:
        app: sml2-cpx
        adc: citrix
    spec:
      serviceAccountName: sml1-cpx
      containers:
      - name: cpx-ingress
        image: quay.io/citrix/citrix-k8s-cpx-ingress:13.0-83.27
        imagePullPolicy: IfNotPresent
        tty: true
        securityContext:
          privileged: true
        resources: {}
        volumeMounts:
        - mountPath: /var/deviceinfo
          name: shared-data
        - mountPath: /cpx/
          name: cpx-volume
      - name: cic
        image: quay.io/citrix/citrix-k8s-ingress-controller:1.25.6
        imagePullPolicy: IfNotPresent
        args:
        - --configmap default/sml2-cpx-cic-configmap
        - --ingress-classes tier-2-cpx2
        volumeMounts:
        - mountPath: /var/deviceinfo
          name: shared-data
        resources: {}
      volumes:
      - name: shared-data
        emptyDir: {}
      - name: cpx-volume
        emptyDir: {}
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: tier-2-cpx2
spec:
  controller: citrix.com/ingress-controller
---
apiVersion: v1
kind: Service
metadata:
  name: sml3-cpx-service
  labels:
    app: cpx-service
    service-type: sml3-citrix-adc-cpx-svcmon
spec:
  ports:
  - port: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  selector:
    app: sml3-cpx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sml3-cpx
  namespace: default
spec:
  selector:
    matchLabels:
      app: sml3-cpx
  replicas: 1
  template:
    metadata:
      name: sml3-cpx
      labels:
        app: sml3-cpx
        adc: citrix
    spec:
      serviceAccountName: sml1-cpx
      containers:
      - name: cpx-ingress
        image: quay.io/citrix/citrix-k8s-cpx-ingress:13.0-83.27
        imagePullPolicy: IfNotPresent
        tty: true
        securityContext:
          privileged: true
        resources: {}
        volumeMounts:
        - mountPath: /var/deviceinfo
          name: shared-data
        - mountPath: /cpx/
          name: cpx-volume
      - name: cic
        image: quay.io/citrix/citrix-k8s-ingress-controller:1.25.6
        imagePullPolicy: IfNotPresent
        args:
        - --configmap default/sml3-cpx-cic-configmap
        - --ingress-classes tier-2-cpx3
        volumeMounts:
        - mountPath: /var/deviceinfo
          name: shared-data
        resources: {}
      volumes:
      - name: shared-data
        emptyDir: {}
      - name: cpx-volume
        emptyDir: {}
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: tier-2-cpx3
spec:
  controller: citrix.com/ingress-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sml-cic
  namespace: default
spec:
  selector:
    matchLabels:
      app: sml-cic
  replicas: 1
  template:
    metadata:
      name: cic
      labels:
        app: sml-cic
    spec:
      serviceAccountName: sml-cic
      containers:
      - name: cic
        image: quay.io/citrix/citrix-k8s-ingress-controller:1.25.6
        imagePullPolicy: IfNotPresent
        args:
        - --configmap default/sml-cic-configmap
        - --ingress-classes tier-1-vpx
        - --feature-node-watch true
        - --update-ingress-status yes
        resources: {}
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: tier-1-vpx
spec:
  controller: citrix.com/ingress-controller
